# mediation-simulator

./: .gitignore  ARTICLE.md  CHANGELOG.md  LICENSE  README.md  docker-compose.milvus.yml  docker-compose.redis.yml  dummy_data.json  index.html  interactive.html
aiq/: .gitignore  README.md  __init__.py  generate_case_list_data.py  index.py  pyproject.toml
aiq/aiq_simple_calculator/: register.py
aiq/case_generation/: register.py
aiq/case_generation/prompts/: initial_case_generation.txt
aiq/configs/: case-generation.yml  config.yml  mediation.yml
aiq/data/: .gitignore  all_cases.yml
aiq/data/anzzsjhp/: basic_case_information.md  case_generation_state.yaml  documents.json  initial_case_description.md  mediation_state.yaml
aiq/data/bsvhhswm/: basic_case_information.md  case_details.json  case_generation_state.yaml  documents.json  image_prompts.json  initial_case_description.md
aiq/data/jvaultju/: basic_case_information.md  case_details.json  case_generation_state.yaml  documents.json  initial_case_description.md  mediation_state.yaml
aiq/data/kvfmdpqe/: basic_case_information.md  case_details.json  case_generation_state.yaml  documents.json  image_prompts.json  initial_case_description.md  mediation_state.yaml
aiq/data/qbsknaqs/: basic_case_information.md  case_details.json  case_generation_state.yaml  documents.json  image_prompts.json  initial_case_description.md  mediation_state.yaml
aiq/data/qiqusezs/: basic_case_information.md  case_details.json  case_generation_state.yaml  documents.json  initial_case_description.md  (+1 more)
aiq/mediation/: README.md  __init__.py  case_document_retriever.py  case_query_agent.py  register.py  types.py
aiq/redis/: register.py
aiq/server/: register.py
aiq/utils/: __init__.py  graphviz.py  serialize.py  yaml.py
(+107 files in other folders)
