[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = ".."

[tool.setuptools]
packages = [
    "aiq_simple_calculator",
    "case_generation",
    "mediation"
]

[project]
name = "mediation-simulator"
version = "0.1.0"
description = "A mediation simulator application"
authors = [
    {name = "Brian Caffey", email = "briancaffey2010@gmail.com"}
]
dependencies = [
    "pyppeteer",
    "graphviz",
    "aiqtoolkit",
    "aiqtoolkit[llama-index]",
    "aiqtoolkit[langchain]",
    "aiqtoolkit[telemetry]",
    "llama-index-vector-stores-milvus",
    "llama-index-embeddings-langchain",
    "langchain-nvidia-ai-endpoints",
    "soundfile"
]
requires-python = ">=3.11,<3.13"

[project.entry-points.'aiq.components']
aiq_simple_calculator = "aiq_simple_calculator.register"
case_generation = "case_generation.register"
mediation = "mediation.register"

[tool.hatch.metadata]
allow-direct-references = true
